2008-11-21  Dean Jackson  <dino@apple.com>

        CSSAnimation.html:
        
        * animation-name should accept IDENT not <string>
        * animation-play-state marked as "about to be removed"
        * more description of when an animation is applied, that
          they snapshot keyframes and values as they start and
          how they need to be removed to reset.
        
        CSSTransitions.html:
        
        * list of animatable properties and how to animate property
          types.
        * specify that values for bezier points outside of [0,1] are
          invalid.

        CSSTransforms.html:
        
        * split into 2d and 3d specifications
        * transform-origin now matches background-position definition.
        * describe how to animate between lists of transforms

        CSSTransforms3D.html
        
        * new specification which is the 3d parts of transforms
        * perspective must be > 0
        * perspective-origin also matches background-position
        * describe how to animate between lists of transforms, but this
          time in 3d which is harder.

2008-10-10  Dean Jackson  <dino@apple.com>

        Keyframe example had "0" rather than "0%".
        
        * CSSAnimations.html:

2008-10-08  Dean Jackson  <dino@apple.com>

        Forgot to set the date on the spec documents with last commit.
        
        * CSSAnimations.html:
        * CSSTransforms.html:
        * CSSTransitions.html:

2008-09-04  Dean Jackson  <dino@apple.com>

        Change transform operation values in CSSTransformValue -
        splitting 2d and 3d.

        * CSSTransforms.html:

2008-08-26  Dean Jackson <dino@apple.com>
    
    Animations
    
        * Keyframes must provide 0% and 100% to be valid
          <rdar://problem/6165732> [animations] Spec should say what happens if you omit the 0% or 100% keyframe
    
        * Mention that keyframes can be specified in any order