@@ -444,7 +444,7 @@
       CSS Transforms
     </h1>
     <h2>
-      21 November 2008
+      3 December 2008
     </h2>
     <dl>
       <dt>
@@ -460,6 +460,10 @@
         Chris Marrin (<a href="mailto:cmarrin@apple.com">cmarrin@apple.com</a>), <a href="http://www.apple.com/">Apple</a>
       </dd>
     </dl>
+
+    <p>
+      A <a href="ChangeLog">list of changes</a> for this document is available.
+    </p>
 
     <h2>
       Contents
@@ -1264,7 +1268,7 @@ interface CSSMatrix {
                     <div class='returnvalue'>
                       <dl>
                         <dt>
-                          <code>NOT_SUPPORTED_ERROR</code>
+                          <code>SYNTAX_ERR</code>
                         </dt>
                         <dd>
                           Thrown when the provided string can not be
